--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,6 @@
         "php": ">=5.4.0"
     },
     "autoload": {
-        "psr-4": { "App\\Api\\": "src/"}
+        "psr-4": { "Budkit\\Api\\": "src/"}
     }
 }
